Fix discover page body spacing

--- a/app/assets/stylesheets/slap_index.css
+++ b/app/assets/stylesheets/slap_index.css
@@ -6,7 +6,7 @@ dex {
 }
 
 .slap-index-section {
-  margin-top: 30px;
+  padding-top: 30px;
   margin-left: 100px;
   border-bottom: 1px solid #e6e6e6;
 }
